[package]
name = "ghostwriter"
edition = "2018"
version = "0.0.0"

[dependencies]
rp2040-boot2 = { version = "0.3.0", optional = true }
rp2040-hal = { version = "0.10.0", features = [ "defmt" ] }

cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", optional = true }

embedded-hal = "1.0.0"
panic-halt= "0.2.0"
critical-section = "1.1.2"
pimoroni-tiny2040 = "0.7.0"

usbd-hid = "0.7.0"
usb-device = "0.3.1"

# Features adapted from rp-hal-boards/pimoroni-tiny2040

[features]
# This is the set of features we enable by default
default = ["boot2", "rt", "critical-section-impl", "rom-func-cache"]

# critical section that is safe for multicore use
critical-section-impl = ["rp2040-hal/critical-section-impl"]

# 2nd stage bootloaders for rp2040
boot2 = ["rp2040-boot2"]

# Minimal startup / runtime for Cortex-M microcontrollers
rt = ["cortex-m-rt","rp2040-hal/rt"]

# Memoize(cache) ROM function pointers on first use to improve performance
rom-func-cache = ["rp2040-hal/rom-func-cache"]
