[workspace]
members = [ "twine" ]

[package]
name = "ghostwriter"
edition = "2021"
version = "0.0.0"

[dependencies]

# Embedded rust dependencies

# The ARM cortex
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

# Locking
critical-section = "1.1"

# Embassy deps
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { version = "0.5.1", default-features = false, features = ["defmt", "usbd-hid"] }
embassy-futures = { version = "0.1.2" }

# Logging etc
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# Randomness (for typing out lorem chars)
rand_distr = { version = "0.4.3", default-features = false }

usbd-hid = "0.8.1"
libm = "0.2.15"

twine = { path = "./twine" }

[profile.release]
# Enable generation of debug symbols even on release builds
# (for defmt)
debug = true
